<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.clouddrive.v3.folder.FolderFileListActivity">
    <include layout="@layout/snippet_appbarlayout_toolbar" />

<!--        面包屑导航 -->
        <HorizontalScrollView
            android:id="@+id/hsv_cloud_disk_v3_folder_file_breadcrumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_snippet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="0dp">

            <LinearLayout
                android:id="@+id/ll_cloud_disk_v3_folder_file_breadcrumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/spacing_small"
                android:padding="@dimen/spacing_small">
                <TextView
                    android:id="@+id/tv_cloud_disk_v3_folder_file_first_crumb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/title_activity_yunpan"
                    android:textColor="@color/z_color_text_primary_dark"
                    android:textSize="15sp" />
            </LinearLayout>
        </HorizontalScrollView>
        <View
            android:id="@+id/view_cloud_disk_v3_folder_file_split"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/hsv_cloud_disk_v3_folder_file_breadcrumb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:background="@color/z_color_split_line_ddd" />
<!--        列表 -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_cloud_disk_v3_folder_file"
            app:layout_constraintBottom_toTopOf="@+id/ll_cloud_disk_v3_folder_file_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_cloud_disk_v3_folder_file_split"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rl_cloud_disk_v3_folder_file_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

<!--        底部工具栏 -->
        <LinearLayout
            android:id="@+id/ll_cloud_disk_v3_folder_file_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/srl_cloud_disk_v3_folder_file"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/z_color_background"
            android:visibility="visible"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <Button
                android:id="@+id/btn_cloud_disk_v3_rename"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:text="@string/yunpan_rename"
                style="@style/whiteButtonStyle"
                android:enabled="true"
                />
            <Button
                android:id="@+id/btn_cloud_disk_v3_delete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginStart="6dp"
                style="@style/whiteButtonStyle"
                android:enabled="true"
                android:text="@string/yunpan_delete"
                />

            <Button
                android:id="@+id/btn_cloud_disk_v3_move"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginStart="6dp"
                style="@style/whiteButtonStyle"
                android:enabled="true"
                android:text="@string/yunpan_move"
                />
            <Button
                android:id="@+id/btn_cloud_disk_v3_save_to_my"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="29dp"
                android:layout_marginStart="6dp"
                style="@style/whiteButtonStyle"
                android:enabled="true"
                android:text="@string/yunpan_save_to_my_pan"
                />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>