<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/z_color_background">

    <RelativeLayout
        android:id="@+id/rl_start_process_dialog_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_start_process_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_window_close_black" />

        <TextView
            android:id="@+id/tv_start_process_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_process_dialog_title" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_start_process_dialog_form"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_start_process_dialog_top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_weight="1"
                android:text="@string/start_process_step_two_department"
                android:textColor="@color/z_color_text_primary_dark"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radio_group_process_step_two_department"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"></RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/z_color_split_line_ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_process_step_two_identity"
                android:textColor="@color/z_color_text_primary_dark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_start_process_step_two_identity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLines="1"
                android:textColor="@color/z_color_text_primary"
                android:textSize="14sp"
                tools:text="楼国栋" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/z_color_split_line_ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_process_step_two_time"
                android:textColor="@color/z_color_text_primary_dark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_start_process_step_two_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/z_color_text_primary"
                android:textSize="14sp"
                tools:text="2017-03-04 12:12" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_start_process_step_two_positive"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/button_background_44dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />
    </LinearLayout>


    <net.zoneland.x.bpm.mobile.v1.zoneXBPM.widgets.CircleProgressBar
        android:id="@+id/cpb_start_process_dialog_loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mlpb_progress_color="@color/colorPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>