<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/z_color_split_line"
        android:padding="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/z_color_bottom_bar_background"
        android:orientation="horizontal"
        android:padding="0dp">

        <RelativeLayout
            android:id="@+id/rl_icon_main_bottom_index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp">
        <ImageView
            android:id="@+id/icon_main_bottom_index"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:visibility="visible"
            android:src="@mipmap/index_bottom_menu_logo_focus" />
        <ImageView
            android:id="@+id/icon_main_bottom_index_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:src="@mipmap/index_bottom_menu_logo_blur" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/icon_main_bottom_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp">

            <ImageView
                android:id="@+id/image_icon_main_bottom_news"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon_main_news" />

            <TextView
                android:id="@+id/tv_icon_main_bottom_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_icon_main_bottom_news"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_message"
                android:textColor="@color/z_color_text_primary"
                android:textSize="12sp" />

            <net.zoneland.x.bpm.mobile.v1.zoneXBPM.widgets.CircleTextView
                android:id="@+id/circle_tv_icon_main_bottom_news"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="25dp"
                android:textAlignment="center"
                android:visibility="gone"
                app:c_height="16dp"
                app:c_inColor="@color/z_color_primary"
                app:c_text="5"
                app:c_textColor="@android:color/white"
                app:c_textSize="@dimen/font_mini"
                app:c_width="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/icon_main_bottom_contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp">

            <ImageView
                android:id="@+id/image_icon_main_bottom_contact"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon_main_contact" />

            <TextView
                android:id="@+id/tv_icon_main_bottom_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_icon_main_bottom_contact"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_contact"
                android:textColor="@color/z_color_text_primary"
                android:textSize="12sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/icon_main_bottom_app"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp">

            <ImageView
                android:id="@+id/image_icon_main_bottom_app"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon_main_app" />

            <TextView
                android:id="@+id/tv_icon_main_bottom_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_icon_main_bottom_app"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_app"
                android:textColor="@color/z_color_text_primary"
                android:textSize="12sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/icon_main_bottom_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp">

            <ImageView
                android:id="@+id/image_icon_main_bottom_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon_main_setting" />

            <TextView
                android:id="@+id/tv_icon_main_bottom_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_icon_main_bottom_setting"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_settings"
                android:textColor="@color/z_color_text_primary"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>