<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/z_color_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/my_app_top_image"
            android:layout_width="375dp"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_height="195dp"
            android:scaleType="fitXY"
            android:src="@mipmap/my_app_top"/>

        <LinearLayout
            android:id="@+id/my_app_list_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_small"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_small"
            android:orientation="vertical"
            android:background="@drawable/background_white_radius_10">

            <TextView
                android:id="@+id/my_app_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:textStyle="bold"
                android:textColor="@color/z_color_text_primary_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/my_app"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_app_recycler_view"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/meeting_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_small"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:orientation="vertical"
            android:background="@drawable/background_white_radius_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_large"
                android:textColor="@color/z_color_text_primary_dark"
                android:text="@string/native_app"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/native_app_recycler_view"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/meeting_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_small"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:orientation="vertical"
            android:background="@drawable/background_white_radius_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/font_large"
                android:textColor="@color/z_color_text_primary_dark"
                android:text="@string/portal_app"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_portal_app"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>
</ScrollView>